syntax = "proto3";

package pb;

import "genre.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb";

message GetAllGenresRequest {
  int32 pageNumber = 1;
  int32 pageSize = 2;
}

message GetAllGenresResponse { repeated Genre genres = 1; }